# zk-verify-poc

./: .env.example  .gitignore  .gitmodules  .oxlintrc.json  .prototools  AGENTS.md  DUMMY_README.md  Dockerfile.test-readme  PRD.md  README.md  TASKLIST.md  lefthook.yml  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-poc-ineligible.sh  run-poc.sh  tsconfig.json  vitest.config.ts
.agents/: README.md
.agents/findings/: TEMPLATE.md
.agents/skills/: README.md
.claude/skills/: moon  proto
.moon/: toolchain.yml  toolchains.yml  workspace.yml
.zed/: settings.json
circuits/: eligibility.ts
contracts/: VerificationRegistry.ts
mock-server/: README.md  cert.pem  moon.yml  server.ts  vitest.config.ts
mock-server/tests/: server.spec.ts
poc/: README.md  deploy.ts  extract-fields.ts  gen-wallet.ts  moon.yml  package.json  prove.ts  settle.ts  verify-chain.ts  verify.ts  vitest.config.ts
poc/circuits/: eligibility.ts
poc/contracts/: VerificationRegistry.ts
poc/lib/: attestation.ts  chain-verification.ts  deploy-metadata.ts  disclosure.ts  eligibility.ts  env.ts  io.ts  paths.ts  poc-security-config.ts  poseidon.ts  prove-input.ts
poc/tests/: attestation.spec.ts  chain-verification.spec.ts  (+12 more)
scripts/: deploy.ts  extract-fields.ts  gen-wallet.ts  prove.ts  settle.ts  verify.ts
tests/: attestation.spec.ts  eligibility.spec.ts  env.spec.ts  extract-fields.spec.ts  mock-server.spec.ts
tlsnotary/: Cargo.toml  README.md  moon.yml
tlsnotary/src/: lib.rs
ui/: .gitignore  README.md  moon.yml  nuxt.config.ts  package.json  wrangler.jsonc
(+24 files in other folders)
