[package]
name = "zkverify-tlsnotary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notary"
path = "src/bin/notary.rs"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[dependencies]
anyhow = "1.0"
bcs = "0.1"
bincode = "1.3"
futures = "0.3"
hex = "0.4"
k256 = "0.13"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

tlsn = { path = "../vendor/tlsn/crates/tlsn" }
tlsn-formats = { path = "../vendor/tlsn/crates/formats" }
